# dots-wamp-api-server

./: .gitignore  Cargo.toml  LICENSE  diesel.toml  docker-compose.yml
migrations/2020-09-25-203944_initial/: down.sql  up.sql
src/: helpers.rs  main.rs  schema.rs
src/contests/: errors.rs  handlers.rs  mod.rs  models.rs  resolvers.rs
src/contests/models/: contest.rs  contest_problems.rs
src/problems/: errors.rs  handlers.rs  mod.rs  models.rs  resolvers.rs
src/sessions/: errors.rs  handlers.rs  mod.rs  models.rs  resolvers.rs
src/solutions/: errors.rs  handlers.rs  mod.rs  models.rs  resolvers.rs
src/users/: errors.rs  handlers.rs  mod.rs  models.rs  resolvers.rs
wamp/: config.json
