[package]
name = "dots-wamp-api-server"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = { version = "0.2.22", features = ["macros", "time"] }
diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
tokio-diesel = "0.3.0"
serde = "1.0.116"
serde_json = "1.0.57"

chrono = "0.4"

#wamp_async = "0.1.0"
wamp_async = { path = "./wamp_async.bak" }
#wamp_async = { git = "https://github.com/elast0ny/wamp_async", rev = "7e90482f52ac04fe8f4b58bbf27083b355a0ae6b" }
