[package]
name = "dots-wamp-api-server"
version = "0.1.0"
authors = ["Vlad Frolov <frolvlad@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.5"
tokio = { version = "1", features = ["macros", "time"] }
diesel = { version = "1.4.5", features = ["mysql", "r2d2"] }
tokio-diesel = { git = "https://github.com/mehcode/tokio-diesel", rev = "f4af42558246ab323600622ba8d08803d3c18842" }
serde = "1.0.116"
serde_json = "1.0.57"

chrono = "0.4"
thiserror = "1.0.24"

wamp_async = "0.3"
